# littlebot

./: .gitignore  .readthedocs.yaml  CITATION.cff  DEPENDENCIES.md  README.md  install_dependencies.sh  littlebot.repos
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: github-actions-demo.yml  github-actions.yml
docs/: Doxyfile  Makefile  README.md  api.rst  build_docs.sh  conf.py  cpp-doxygen.rst  index.rst  overview.rst  requirements.txt
docs/doxygen/html/: annotated.html  classes.html  classlittlebot__base_1_1LittlebotCommunication-members.html  classlittlebot__base_1_1LittlebotCommunication.html  classlittlebot__base_1_1LittlebotCommunicationInterface-members.html  classlittlebot__base_1_1LittlebotCommunicationInterface.html  classlittlebot__base_1_1LittlebotCommunicationInterface__inherit__graph.map  classlittlebot__base_1_1LittlebotCommunicationInterface__inherit__graph.md5  classlittlebot__base_1_1LittlebotCommunication__coll__graph.md5  classlittlebot__base_1_1LittlebotCommunication__inherit__graph.map  classlittlebot__base_1_1LittlebotHardwareComponent-members.html  classlittlebot__base_1_1LittlebotHardwareComponent.html  classlittlebot__base_1_1LittlebotHardwareComponent__coll__graph.map  dir_000003_000000.html  dir_68f9b4efa9a45af395acbb4168c1cb3c.html  (+51 more)
docs/source/: changelog.rst  conf.py  getting_started.rst  installation.rst  troubleshooting.rst
little_gazebo/launch/: gazebo.launch
littlebot/: CMakeLists.txt  package.xml
littlebot_base/: .ament_copyright  CMakeLists.txt  littlebot_hardware.xml  littlebot_hardware_component.xml  package.xml  run_tests.sh
littlebot_base/include/husky_base/: littlebot_listener.hpp
littlebot_base/include/littlebot_base/: communication_protocol.hpp  firmware_comm.hpp  i_firmware_comm.hpp  i_serial_port.hpp  littlebot_communication.hpp  littlebot_communication_interface.hpp  littlebot_communication_protocol.hpp  littlebot_driver.hpp  littlebot_hardware.hpp  littlebot_hardware_component.hpp  littlebot_hardware_comunication.hpp  littlebot_listener.hpp  littlebot_serial_communication.hpp  littlebot_talker.hpp  protocol.hpp  reader.hpp  serial_port.hpp  visibility_control.h  writer.hpp
littlebot_base/launch/: lattlebot_base.launch.py  littlebot_base.launch.py  littlebot_base_container.launch.py
littlebot_base/scripts/: create_bluetooth_device.sh  install_coverage_tools.sh  littlebot_fake.py  littlebot_mock.py  littlebot_protocol_pb2.py  run_coverage.sh  run_tests.sh
littlebot_base/src/: communication_protocol.cpp  firmware_comm.cpp  littlebot_base_composition.cpp  littlebot_communication.cpp  littlebot_communication_protocol.cpp  littlebot_driver.cpp  littlebot_hardware.cpp  littlebot_hardware_communication.cpp  littlebot_hardware_component.cpp  littlebot_listener.cpp  littlebot_msg.options  littlebot_msg.proto  littlebot_protocol.proto  littlebot_serial_communication.cpp  littlebot_talker.cpp  main.c  manual_composition.cpp  protocol.cpp  reader.cpp  serial_port.cpp  writer.cpp
littlebot_base/test/: mock_firmware_comm.cpp  mock_firmware_comm.hpp  mock_littlebot_communication.cpp  mock_serial_port.hpp  test_firmware_comm.cpp  test_littlebot_driver.cpp  test_littlebot_hardware_component.cpp  test_main.cpp  test_parameter_reading.cpp  test_serial_port.cpp  teste_littlebot_hardeware_component.cpp  teste_load_littlebot_hardeware.cpp
littlebot_bringup/: CMakeLists.txt  package.xml
littlebot_bringup/launch/: littlebot_bringup.launch.py
littlebot_control/: CMakeLists.txt  package.xml
littlebot_control/config/: control.yaml  littlebot_control.yaml  localization.yaml  teleop_ps4.yaml  twist_mux.yaml
littlebot_control/launch/: littlebot_control.launch  littlebot_control.launch.py  rviz.launch  spawn_diffdriver_controller.launch.py
littlebot_control/rviz/: diff_drive.rviz
littlebot_description/: CMakeLists.txt  package.xml
littlebot_description/config/: littlebot_description.rviz
littlebot_description/gazebo/: littlebot.gazebo.xacro
littlebot_description/launch/: littlebot.rviz  littlebot_description.launch.py  littlebot_description_sim.launch.py  littlebot_description_visualization.launch.py  littlebot_rviz.launch
littlebot_description/meshes/: Caster_Mounting_Plate.dae  Caster_Wheel.dae  Caster_Wheel_Plate.dae  HC-SR04.dae  L298_Driver.dae  MPU_6050.dae  Wheel.dae  chassis.dae  chassis2.dae  encoder.dae  hc05.dae  motor.dae  roda.dae  rodinha.dae  sonar.dae  sonar02.dae  suporte_sonar.dae
littlebot_description/ros2_control/: littlebot.ros2_control.xacro
littlebot_description/urdf/: littlebot.gv  littlebot.urdf  littlebot.xacro  littlebot_body.urdf.xacro  littlebot_description.urdf.xacro  littlebot_description.xacro  littlebot_robot.urdf.xacro  littlebot_sonar.urdf.xacro  littlebot_wheel.urdf.xacro  rodas.xacro  sonar.xacro
littlebot_gazebo/: CMakeLists.txt  package.xml
littlebot_gazebo/launch/: gazebo.launch  littlebot_world.launch
littlebot_gazebo/worlds/: basic.world  maze.world
littlebot_localization/: CMakeLists.txt  package.xml
littlebot_localization/config/: littlebot_localization.yaml
littlebot_localization/launch/: littlebot_control.launch.py  littlebot_localization.launch.py
littlebot_navigation/: CMakeLists.txt  package.xml
littlebot_navigation/config/: costmap_common.yaml  costmap_global_ranger.yaml  costmap_local.yaml  planner.yaml
littlebot_navigation/launch/: littlebot_move_base.launch  littlebot_navigation.launch.py
littlebot_navigation2/: CMakeLists.txt
littlebot_navigation2/config/: littlebot_navigation2.yaml
littlebot_navigation2/launch/: littlebot_navigation.launch.py
littlebot_navigation2/map/: littlebot_world.yaml
littlebot_rviz/: CMakeLists.txt  package.xml
littlebot_rviz/config/: littlebot_dashboard.perspective
littlebot_rviz/launch/: view_robot.launch  view_robot_rqtgui.launch
littlebot_rviz/rviz/: robot.rviz
littlebot_teleop/: CMakeLists.txt  package.xml
littlebot_teleop/include/littlebot_teleop/: teleop.hpp
littlebot_teleop/launch/: littlebot_teleop.launch.py
littlebot_teleop/src/: teleop.cpp
rosdep/: custom.yaml
(+31 files in other folders)
