<?xml version="1.0"?>
<package format="3">

  <name>littlebot</name>
  <version>0.0.0</version>
  <description>The littlebot metapackage</description>

  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
  <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>