<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>littlebot_base</name>
  <version>1.0.8</version>
  <description>Package for comunnication with the littlebot hardware</description>

  <author email="nestor-dp@hotmail.com">Nestor</author>

  <maintainer email="nestor-dp@hotmail.com">Nestor</maintainer>

  <license>GNU</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
