<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>littlebot_localization</name>
  <version>1.0.8</version>
  <description>Lttlebot controller configurations</description>

  <author email="nestor-dp@hotmail.com">Nestor Pereira Neto</author>
  <maintainer email="nestor-dp@hotmail.com">Nestor Pereira Neto</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_localization</depend>
  <depend>littlebot_description</depend>
  <depend>littlebot_control</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
