<package>
  <name>littlebot_navigation</name>
  <version>0.1.0</version>
  <description>littlebot_navigation</description>
  <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>

  <license>BSD</license>

  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>range_sensor_layer</run_depend>

  <export>
  </export>
</package>
