<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>littlebot_navigation2</name>
  <version>2.1.4</version>
  <description>ROS 2 launch scripts for navigation2</description>

  <license>GNU</license>
  <maintainer email="nestor-dp@hotmail.com">Nestor</maintainer>
  <author email="nestor-dp@hotmail.com">Nestor Pereira Neto</author>
  <author email="nestor-dp@hotmail.com">Nestor Pereira Neto</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>