<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>littlebot_teleop</name>
  <version>1.0.8</version>
  <description>Package teleop littlebot</description>

  <author email="nestor-dp@hotmail.com">Nestor</author>

  <maintainer email="nestor-dp@hotmail.com">Nestor</maintainer>

  <license>GNU</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joystick_drivers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>